--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "# An MVC framework written in JS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node server.js"
   },
   "keywords": [],
   "author": "Muhammadreza Haghiri",
